tabletmodemanager: control kirigami tablet mode

KWin itself may use kirigami but kirigami then talks to kwin (through
the xdg-desktop-portal) leading to a dbus deadlock. Instead control
kirigami's tabletmode through the environment

BUG: 468443